[project]
name = "sanic-rate-limit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.11.9",
    "sanic>=25.3.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "pyright[nodejs]>=1.1.405",
    "ruff>=0.13.1",
]
